# postil-reviewer

./: .postil.yaml  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: ci.yml
src/: config.rs  github.rs  lib.rs  main.rs  openrouter.rs  review.rs  text.rs
tests/: live_openrouter.rs  review_cli.rs
