[package]
name = "postil-reviewer"
version = "0.1.0"
edition = "2024"
description = "Rust review bot binary for Postil"
license = "Apache-2.0"

[[bin]]
name = "postil"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
reqwest = { version = "0.13.3", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
wiremock = "0.6.5"
